--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+    <script src="app.js" defer></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -34,7 +39,5 @@
     <div id="footer-container" class="container-fluid">
       created by Sean Kempt.
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="app.js"></script>
   </body>
 </html>
