--- a/index.html
+++ b/index.html
@@ -33,11 +33,25 @@
       class="container-fluid d-flex align-items-center justify-content-center"
     >
       <div class="card">
-        <div class="card-body">Hello World!</div>
+        <div
+          id="weather-container"
+          class="card-body d-flex justify-content-center"
+        >
+          <div class="d-flex flex-grow-2 flex-column">
+            <h1 id="city-name">City Name</h1>
+            <p id="skies">cloudy</p>
+            <p id="current-temp">60</p>
+          </div>
+          <div id="additional-info" class="d-flex flex-column">
+            <p id="feels-like"></p>
+            <p id="high-temp">75</p>
+            <p id="low-temp">50</p>
+          </div>
+        </div>
       </div>
     </div>
     <div id="footer-container" class="container-fluid">
-      created by Sean Kempt.
+      Created by Sean Kempt
     </div>
   </body>
 </html>
